Fiks bug med flex wrap column

--- a/src/pages/registrering/grunnleggende-ferdigheter/grunnleggendeFerdigheter.less
+++ b/src/pages/registrering/grunnleggende-ferdigheter/grunnleggendeFerdigheter.less
@@ -3,10 +3,7 @@
 .grunnleggendeFerdigheter {
   @media (min-width: @mobile-breakpoint) {
     &__alternativer {
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      height: 10rem;
+      column-count: 2;
     }
   }
 }
